# rating-service

./: .gitignore  LICENSE  Makefile  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci-pre.yml  ci-pro.yml
app/: .dockerignore  .env  Dockerfile  docker-compose.yml  init_db.sql  pyproject.toml  requirements.txt
app/src/: main.py
app/src/api/: mutation.py  query.py
app/src/data/: generate_data.py  player_ratings.json  players.json  sample.py  scores.json  session.py
app/src/database/: data.py  sample.py  session.py
app/src/demo/: main.py
app/src/demo/internal/: admin.py  config.py  logger.py
app/src/demo/routers/: users.py
app/src/events/: consumer.py  publisher.py
app/src/model/: player_rating_model.py  score_model.py  user_model.py
app/src/repository/: player_rating_repository.py  score_repository.py  user_repository.py
app/src/resolver/: mutation.py  player_rating_mutation.py  player_rating_query.py  player_rating_schema.py  query.py  schema.py  score_mutation.py  score_query.py  score_schema.py
app/src/routes/: consumer.py  graphql.py  graphql_router.py  health_router.py
app/src/schema/: user_schema.py
app/src/service/: rating_service.py  user_service.py
app/src/utils/: config.py  converters.py  logger.py
app/tests/acceptance/: test_acceptance.py  test_find_all_users.py  test_find_one_user.py
app/tests/integration/: test_integration.py
app/tests/unit/: test_main.py  test_unit.py
scripts/: create-requirements.sh
