[tool.poetry]
package-mode = false
name = "demo"
version = "0.1.0"
description = "Proof of concept for the Master Cloud Apps"
authors = ["manloralm"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
ruff = "^0.4.3"
httpx = "^0.27.0"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
requests = "^2.31.0"
expects = "^0.9.0"
pylint = "^3.1.0"
mypy = "^1.10.0"
doublex = "^1.9.6.1"
pytest-xdist = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"